<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="none"
    tools:context=".ui.pharmacists.fragments.medicine.addNew.AddNewMedicineFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constTop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/btnBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12sdp"
                android:background="?actionBarItemBackground"
                android:contentDescription="@null"
                android:src="@drawable/ic_back_with_bg"
                app:layout_constraintBottom_toBottomOf="@+id/tvTitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tvTitle" />

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/add_new_medicine"
                android:textColor="@color/black"
                android:textSize="@dimen/_26ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/ivMedicine"
                android:layout_width="@dimen/_95sdp"
                android:layout_height="@dimen/_95sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:src="@drawable/store_image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvTitle" />

            <ImageView
                android:id="@+id/btnPickProfile"
                android:layout_width="@dimen/_28sdp"
                android:layout_height="@dimen/_28sdp"
                android:layout_marginTop="@dimen/_78sdp"
                android:src="@drawable/pick_profile_ic"
                app:layout_constraintEnd_toEndOf="@id/ivMedicine"
                app:layout_constraintStart_toStartOf="@+id/ivMedicine"
                app:layout_constraintTop_toTopOf="@id/ivMedicine" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:text="@string/medicine_name"
            android:textColor="@color/black" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/AppInputText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_5sdp"
            app:startIconTint="@color/gray">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_medicine_name"
                android:imeOptions="actionNext"
                android:inputType="textPersonName"
                android:paddingVertical="@dimen/_16sdp"
                android:textColor="@color/black"
                android:textColorHint="@color/blueHint"
                android:textSize="@dimen/_14ssp" />
        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:text="@string/description"
            android:textColor="@color/black" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/AppInputText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_5sdp"
            app:startIconTint="@color/gray">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_medicine_description"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:paddingVertical="@dimen/_16sdp"
                android:textColor="@color/black"
                android:textColorHint="@color/blueHint"
                android:textSize="@dimen/_14ssp" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:text="@string/price"
            android:textColor="@color/black" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/AppInputText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_5sdp"
            app:startIconTint="@color/gray">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_price"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:paddingVertical="@dimen/_16sdp"
                android:textColor="@color/black"
                android:textColorHint="@color/blueHint"
                android:textSize="@dimen/_14ssp" />
        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:text="@string/quantity"
            android:textColor="@color/black" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/AppInputText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_5sdp"
            app:startIconTint="@color/gray">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etQuantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_quantity"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:paddingVertical="@dimen/_16sdp"
                android:textColor="@color/black"
                android:textColorHint="@color/blueHint"
                android:textSize="@dimen/_14ssp" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:text="@string/category"
            android:textColor="@color/black" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_select_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:background="@drawable/bg_text_view"
            android:clickable="true"
            android:drawableEnd="@drawable/ic_down_arrow"
            android:focusable="true"
            android:hint="@string/select_category"
            android:paddingHorizontal="@dimen/_12sdp"
            android:paddingVertical="@dimen/_16sdp"
            android:textColor="@color/blueDark"
            android:textColorHint="@color/medium_gray"
            android:textSize="@dimen/_14ssp" />


        <!--        <com.google.android.material.textfield.TextInputLayout-->
<!--            style="@style/AppInputText"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginHorizontal="@dimen/_12sdp"-->
<!--            android:layout_marginTop="@dimen/_5sdp"-->
<!--            app:endIconDrawable="@drawable/ic_down"-->
<!--            app:endIconTint="@color/gray">-->

<!--            <com.google.android.material.textfield.TextInputEditText-->
<!--                android:id="@+id/etCategory"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:hint="@string/enter_category"-->
<!--                android:imeOptions="actionNext"-->
<!--                android:focusable="false"-->
<!--                android:focusableInTouchMode="false"-->
<!--                android:paddingVertical="@dimen/_16sdp"-->
<!--                android:textColor="@color/black"-->
<!--                android:textColorHint="@color/blueHint"-->
<!--                android:textSize="@dimen/_14ssp" />-->
<!--        </com.google.android.material.textfield.TextInputLayout>-->



        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSave"
            style="@style/AppSolidButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_24sdp"
            android:layout_marginBottom="@dimen/_4sdp"
            android:text="@string/add"
            android:textColor="@color/white" />

    </LinearLayout>


</ScrollView>