<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.admin.activities.AdminActivity">

    <TextView
        android:id="@+id/text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/admin"
        android:textColor="@color/blueDark"
        android:textSize="@dimen/_26ssp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/btnLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="Logout"
        android:textColor="@color/red"
        android:textSize="@dimen/_16ssp"
        android:textStyle="bold"
        android:drawablePadding="@dimen/_5sdp"
        app:layout_constraintBottom_toBottomOf="@+id/text_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/text_title"
        android:clickable="true"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:focusable="true"
        app:drawableEndCompat="@drawable/ic_log_out" />


    <TextView
        android:id="@+id/text_requests"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:text="@string/pharmacist_account_requests"
        android:textColor="@color/blueDark"
        android:textSize="@dimen/_16ssp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_title" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_holder_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_6sdp"
        android:elevation="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_requests"
        app:tabGravity="fill"
        app:tabIndicator="@drawable/button_bg_selector"
        app:tabIndicatorAnimationMode="elastic"
        app:tabIndicatorFullWidth="false"
        app:tabIndicatorGravity="center"
        app:tabIndicatorHeight="@dimen/_30sdp"
        app:tabMode="fixed"
        app:tabSelectedTextColor="@color/white"
        app:tabTextAppearance="@style/TabTextStyle"
        app:tabTextColor="@color/black">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_30sdp"
            android:text="@string/pending" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginHorizontal="@dimen/_5sdp"
            android:text="@string/approved" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginHorizontal="@dimen/_5sdp"
            android:text="@string/rejected" />


    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/request_view_pager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_12sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tab_holder_layout" />



</androidx.constraintlayout.widget.ConstraintLayout>
